--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <header>
         <a href="/index.html" class="logo">libracelia</a>
         <ul>
-            <li><a href="/index.html" class="active">home</a></li>
-            <li><a href="/theory.html">theory</a></li>
-            <li><a href="/calendar.html">calendar</a></li>
-            <li><a href="/portfolio.html">portfolio</a></li>
+            <li><a href="./index.html" class="active">home</a></li>
+            <li><a href="./theory.html">theory</a></li>
+            <li><a href="./calendar.html">calendar</a></li>
+            <li><a href="./portfolio.html">portfolio</a></li>
         </ul>
     </header>
     <section>
@@ -29,7 +29,7 @@
         <img src="./img/planets.png" id="planets">
         <img src="./img/stars.png" id="stars">
         <div class="cards">
-            <a class="card" href="/theory.html">
+            <a class="card" href="./theory.html">
                 <i class="ri-home-heart-fill"></i>
                 <div class="card-item">
                     <h5> theory・myThought</h5>
@@ -39,7 +39,7 @@
                     </div>
                 </div>
             </a>
-            <a class="card" href="/calendar.html">
+            <a class="card" href="./calendar.html">
                 <i class="ri-chat-heart-fill"></i>
                 <div class="card-item">
                     <h5> calendar・myAction</h5>
@@ -49,7 +49,7 @@
                     </div>
                 </div>
             </a>
-            <a class="card" href="/portfolio.html">
+            <a class="card" href="./portfolio.html">
                 <i class="ri-chat-smile-3-fill"></i>
                 <div class="card-item">
                     <h5> portfolio・myWorks</h5>
