--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <body>
     <header>
-        <a href="/index.html" class="logo">libracelia</a>
+        <a href="./index.html" class="logo">libracelia</a>
         <ul>
-            <li><a href="./index.html" class="active">home</a></li>
+            <li><a href="." class="active">home</a></li>
             <li><a href="./theory.html">theory</a></li>
             <li><a href="./calendar.html">calendar</a></li>
             <li><a href="./portfolio.html">portfolio</a></li>
