--- a/theory.html
+++ b/theory.html
@@ -15,12 +15,12 @@
 
 <body>
     <header>
-        <a href="/index.html" class="logo">libracelia</a>
+        <a href="./index.html" class="logo">libracelia</a>
         <ul>
-            <li><a href="/index.html">home</a></li>
-            <li><a href="/theory.html" class="active">theory</a></li>
-            <li><a href="/calendar.html">calendar</a></li>
-            <li><a href="/portfolio.html">portfolio</a></li>
+            <li><a href=".">home</a></li>
+            <li><a href="./theory.html" class="active">theory</a></li>
+            <li><a href="./calendar.html">calendar</a></li>
+            <li><a href="./portfolio.html">portfolio</a></li>
         </ul>
     </header>
     <section>
