--- a/portfolio.html
+++ b/portfolio.html
@@ -14,12 +14,12 @@
 
 <body>
     <header>
-        <a href="/index.html" class="logo">libracelia</a>
+        <a href="./index.html" class="logo">libracelia</a>
         <ul>
-            <li><a href="/index.html">home</a></li>
-            <li><a href="/theory.html">theory</a></li>
-            <li><a href="/calendar.html">calendar</a></li>
-            <li><a href="/portfolio.html" class="active">portfolio</a></li>
+            <li><a href="./index.html">home</a></li>
+            <li><a href="./theory.html">theory</a></li>
+            <li><a href="./calendar.html">calendar</a></li>
+            <li><a href="./portfolio.html" class="active">portfolio</a></li>
         </ul>
     </header>
     <section>
