--- a/education.html
+++ b/education.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <a href="/portfolio.html" class="logo">libracelia</a>
+        <a href="./portfolio.html" class="logo">libracelia</a>
         <ul>
             <li><a href="/education.html" class="active">教育背景</a></li>
             <li><a href="/workexperience.html">工作经历</a></li>
@@ -25,7 +25,7 @@
     <section>
         <div class="title">
             <div class="one-column">
-                <img src="/img/portfolio/NgeeAnn.png" alt="义安理工">
+                <img src="./img/portfolio/NgeeAnn.png" alt="义安理工">
             </div>
             <div class="two-column">
                 <h1>新加坡义安理工（Ngee Ann）</h1>
