--- a/education.html
+++ b/education.html
@@ -17,9 +17,9 @@
     <header>
         <a href="./portfolio.html" class="logo">libracelia</a>
         <ul>
-            <li><a href="/education.html" class="active">教育背景</a></li>
-            <li><a href="/workexperience.html">工作经历</a></li>
-            <li><a href="/designtools.html">设计工具</a></li>
+            <li><a href="./education.html" class="active">教育背景</a></li>
+            <li><a href="./workexperience.html">工作经历</a></li>
+            <li><a href="./designtools.html">设计工具</a></li>
         </ul>
     </header>
     <section>
