--- a/workexperience.html
+++ b/workexperience.html
@@ -15,25 +15,25 @@
 
 <body>
     <header>
-        <a href="/portfolio.html" class="logo">libracelia</a>
+        <a href="./portfolio.html" class="logo">libracelia</a>
         <ul>
-            <li><a href="/education.html">教育背景</a></li>
-            <li><a href="/workexperience.html" class="active">工作经历</a></li>
-            <li><a href="/designtools.html">设计工具</a></li>
+            <li><a href="./education.html">教育背景</a></li>
+            <li><a href="./workexperience.html" class="active">工作经历</a></li>
+            <li><a href="./designtools.html">设计工具</a></li>
         </ul>
     </header>
     <section>
         <div class="subsection">
             <ul>
-                <li><a href="/workexperience.html" class="active"><i class="ri-star-s-fill"></i>青云科技<i class="ri-star-s-fill"></i></a></li>
-                <li><a href="/meiyun.html"></i>美云智数</a></li>
-                <li><a href="/qiyu.html"></i>奇鱼时代</a></li>
+                <li><a href="./workexperience.html" class="active"><i class="ri-star-s-fill"></i>青云科技<i class="ri-star-s-fill"></i></a></li>
+                <li><a href="./meiyun.html"></i>美云智数</a></li>
+                <li><a href="./qiyu.html"></i>奇鱼时代</a></li>
             </ul>
         </div>
 
         <div class="title">
             <div class="one-column">
-                <img src="/img/portfolio/QingCloud.png" alt="义安理工">
+                <img src="./img/portfolio/QingCloud.png" alt="义安理工">
             </div>
             <div class="two-column">
                 <h1>青云科技（武汉）</h1>
@@ -58,28 +58,28 @@
         <div class="container">
             <div class="article">
                 <a href="/qingtest.html">
-                    <img src="/img/workexperience/product cover -1.jpg">
+                    <img src="./img/workexperience/product cover -1.jpg">
                 </a>
                 <h4>QingTest 质量管理平台</h4>
                 <p>PXD 产品体验部</p>
             </div>
             <div class="article">
                 <a href="/tKeel.html">
-                    <img src="/img/workexperience/product cover -2.jpg">
+                    <img src="./img/workexperience/product cover -2.jpg">
                 </a>
                 <h4>tKeel 物联网平台</h4>
                 <p>AIOT 物联网平台</p>
             </div>
             <div class="article">
                 <a href="/htc.html">
-                    <img src="/img/workexperience/project cover -1.jpg">
+                    <img src="./img/workexperience/project cover -1.jpg">
                 </a>
                 <h4>[华兴源创]云加工系统</h4>
                 <p>AIOT 物联网平台</p>
             </div>
             <div class="article">
                 <a href="/edgewize.html">
-                    <img src="/img/workexperience/product cover -3.jpg">
+                    <img src="./img/workexperience/product cover -3.jpg">
                 </a>
                 <h4>[外观专利]边缘本地控制台</h4>
                 <p>AIOT 物联网平台</p>
