--- a/meiyun.html
+++ b/meiyun.html
@@ -15,26 +15,26 @@
 
 <body>
     <header>
-        <a href="/portfolio.html" class="logo">libracelia</a>
+        <a href="./portfolio.html" class="logo">libracelia</a>
         <ul>
-            <li><a href="/education.html">教育背景</a></li>
-            <li><a href="/workexperience.html" class="active">工作经历</a></li>
-            <li><a href="/index.html">设计工具</a></li>
+            <li><a href="./education.html">教育背景</a></li>
+            <li><a href="./workexperience.html" class="active">工作经历</a></li>
+            <li><a href="./index.html">设计工具</a></li>
         </ul>
     </header>
     <section>
         <div class="subsection">
             <ul>
-                <li><a href="/workexperience.html"></i>青云科技</a></li>
-                <li><a href="/meiyun.html" class="active"><i class="ri-star-s-fill"></i>美云智数<i
+                <li><a href="./workexperience.html"></i>青云科技</a></li>
+                <li><a href="./meiyun.html" class="active"><i class="ri-star-s-fill"></i>美云智数<i
                             class="ri-star-s-fill"></i></a></li>
-                <li><a href="/qiyu.html"></i>奇鱼时代</a></li>
+                <li><a href="./qiyu.html"></i>奇鱼时代</a></li>
             </ul>
         </div>
 
         <div class="title">
             <div class="one-column">
-                <img src="/img/portfolio/MideaCloud.png" alt="美云智数">
+                <img src="./img/portfolio/MideaCloud.png" alt="美云智数">
             </div>
             <div class="two-column">
                 <h1>美云智数（佛山）</h1>
