--- a/qiyu.html
+++ b/qiyu.html
@@ -15,25 +15,25 @@
 
 <body>
     <header>
-        <a href="/portfolio.html" class="logo">libracelia</a>
+        <a href="./portfolio.html" class="logo">libracelia</a>
         <ul>
-            <li><a href="/education.html">教育背景</a></li>
-            <li><a href="/workexperience.html" class="active">工作经历</a></li>
-            <li><a href="/index.html">设计工具</a></li>
+            <li><a href="./education.html">教育背景</a></li>
+            <li><a href="./workexperience.html" class="active">工作经历</a></li>
+            <li><a href="./designtools.html">设计工具</a></li>
         </ul>
     </header>
     <section>
         <div class="subsection">
             <ul>
-                <li><a href="/workexperience.html">青云科技</a></li>
-                <li><a href="/meiyun.html"></i>美云智数</a></li>
-                <li><a href="/qiyu.html" class="active"></i><i class="ri-star-s-fill"></i>奇鱼时代<i class="ri-star-s-fill"></i></a></li>
+                <li><a href="./workexperience.html">青云科技</a></li>
+                <li><a href="./meiyun.html"></i>美云智数</a></li>
+                <li><a href="./qiyu.html" class="active"></i><i class="ri-star-s-fill"></i>奇鱼时代<i class="ri-star-s-fill"></i></a></li>
             </ul>
         </div>
 
         <div class="title">
             <div class="one-column">
-                <img src="/img/portfolio/QiYu.png" alt="义安理工">
+                <img src="./img/portfolio/QiYu.png" alt="义安理工">
             </div>
             <div class="two-column">
                 <h1>奇鱼时代（北京）</h1>
