--- a/meiyun.html
+++ b/meiyun.html
@@ -19,7 +19,7 @@
         <ul>
             <li><a href="./education.html">教育背景</a></li>
             <li><a href="./workexperience.html" class="active">工作经历</a></li>
-            <li><a href="./index.html">设计工具</a></li>
+            <li><a href="./designtools.html">设计工具</a></li>
         </ul>
     </header>
     <section>
