--- a/designtools.html
+++ b/designtools.html
@@ -15,53 +15,53 @@
 
 <body>
     <header>
-        <a href="/portfolio.html" class="logo">libracelia</a>
+        <a href="./portfolio.html" class="logo">libracelia</a>
         <ul>
-            <li><a href="/education.html">教育背景</a></li>
-            <li><a href="/workexperience.html">工作经历</a></li>
-            <li><a href="/designtools.html" class="active">设计工具</a></li>
+            <li><a href="./education.html">教育背景</a></li>
+            <li><a href="./workexperience.html">工作经历</a></li>
+            <li><a href="./designtools.html" class="active">设计工具</a></li>
         </ul>
     </header>
     <section>
         <div class="container">
             <div class="article">
                 <a href="designtheory.html">
-                    <img src="/img/designtools/cover - 1.jpg">
+                    <img src="./img/designtools/cover - 1.jpg">
                 </a>
                 <h4>可持续设计资产库的解构方式</h4>
                 <p>设计思维</p>
             </div>
             <div class="article">
                 <a href="xc.html">
-                    <img src="/img/designtools/cover - 2.jpg">
+                    <img src="./img/designtools/cover - 2.jpg">
                 </a>
                 <h4>SOP 流程之设计研究 - 竞品分析</h4>
                 <p>设计思路</p>
             </div>
             <div class="article">
                 <a href="userstalk.html">
-                    <img src="/img/designtools/cover - 3.jpg">
+                    <img src="./img/designtools/cover - 3.jpg">
                 </a>
                 <h4>SOP 流程之用户研究 - 深度访谈</h4>
                 <p>用户研究</p>
             </div>
             <div class="article">
                 <a href="usersmap.html">
-                    <img src="/img/designtools/cover - 4.jpg">
+                    <img src="./img/designtools/cover - 4.jpg">
                 </a>
                 <h4>SOP 流程之设计分析 - 用户体验地图</h4>
                 <p>设计分析</p>
             </div>
             <div class="article">
                 <a href="dataweb.html">
-                    <img src="/img/designtools/cover - 5.jpg">
+                    <img src="./img/designtools/cover - 5.jpg">
                 </a>
                 <h4>数据平台网页端规范</h4>
                 <p>设计规范</p>
             </div>
             <div class="article">
                 <a href="datascreen.html"> 
-                    <img src="/img/designtools/cover - 6.jpg">
+                    <img src="./img/designtools/cover - 6.jpg">
                 </a>
                 <h4>数据大屏看板交互规范</h4>
                 <p>设计规范</p>
