--- a/designtheory.html
+++ b/designtheory.html
@@ -16,7 +16,7 @@
 <body>
     <!--Header-->
     <header>
-        <i class="ri-arrow-left-line"></i><a href="/designtools.html" class="back">设计工具</a>
+        <i class="ri-arrow-left-line"></i><a href="./designtools.html" class="back">设计工具</a>
     </header>
 
     <!--Content-->
@@ -45,7 +45,7 @@
                     <br /><br />
                 </p>
 
-                <img src="/img/可持续设计资产库.jpg" style="width: 90%;" alt="业务流程图">
+                <img src="./img/可持续设计资产库.jpg" style="width: 90%;" alt="业务流程图">
 
 
                 <p>外部连接</p>
