--- a/xc.html
+++ b/xc.html
@@ -16,7 +16,7 @@
 <body>
     <!--Header-->
     <header>
-        <i class="ri-arrow-left-line"></i><a href="/designtools.html" class="back">设计工具</a>
+        <i class="ri-arrow-left-line"></i><a href="./designtools.html" class="back">设计工具</a>
     </header>
 
     <!--Content-->
