--- a/usersmap.html
+++ b/usersmap.html
@@ -16,7 +16,7 @@
 <body>
     <!--Header-->
     <header>
-        <i class="ri-arrow-left-line"></i><a href="/designtools.html" class="back">设计工具</a>
+        <i class="ri-arrow-left-line"></i><a href="./designtools.html" class="back">设计工具</a>
     </header>
 
     <!--Content-->
@@ -41,7 +41,7 @@
                     - 子流程：当个别活动过于复杂时，可以用”子流程“进行进一步的拆解。<br /><br />
                 </p>
 
-                <img src="/img/业务流程图.png" style="width: 960px;" alt="业务流程图">
+                <img src="./img/业务流程图.png" style="width: 960px;" alt="业务流程图">
 
                 <p>外部连接</p>
                 <br />
