--- a/workexperience.html
+++ b/workexperience.html
@@ -57,28 +57,28 @@
 
         <div class="container">
             <div class="article">
-                <a href="/qingtest.html">
+                <a href="./qingtest.html">
                     <img src="./img/workexperience/product cover -1.jpg">
                 </a>
                 <h4>QingTest 质量管理平台</h4>
                 <p>PXD 产品体验部</p>
             </div>
             <div class="article">
-                <a href="/tKeel.html">
+                <a href="./tKeel.html">
                     <img src="./img/workexperience/product cover -2.jpg">
                 </a>
                 <h4>tKeel 物联网平台</h4>
                 <p>AIOT 物联网平台</p>
             </div>
             <div class="article">
-                <a href="/htc.html">
+                <a href="./htc.html">
                     <img src="./img/workexperience/project cover -1.jpg">
                 </a>
                 <h4>[华兴源创]云加工系统</h4>
                 <p>AIOT 物联网平台</p>
             </div>
             <div class="article">
-                <a href="/edgewize.html">
+                <a href="./edgewize.html">
                     <img src="./img/workexperience/product cover -3.jpg">
                 </a>
                 <h4>[外观专利]边缘本地控制台</h4>
