--- a/qingtest.html
+++ b/qingtest.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <i class="ri-arrow-left-line"></i><a href="/workexperience.html" class="back">工作经历</a>
+        <i class="ri-arrow-left-line"></i><a href="./workexperience.html" class="back">工作经历</a>
     </header>
 
     <!--Content-->
